# parquetta

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-packages.yml
packaging/: dev.parquetta.Parquetta.desktop  dev.parquetta.Parquetta.metainfo.xml  dev.parquetta.Parquetta.mime.xml
src/: app.rs  duckdb_service.rs  formatting.rs  lib.rs  main.rs  query.rs
tests/: open_with_integration.rs
