[package]
name = "parquetta"
version = "0.1.4"
edition = "2021"
description = "Parquetta is a simple software for reading parquet files."
license = "MIT"
repository = "https://github.com/ogregorio/parquetta"

[dependencies]
duckdb = { version = "~1.10504.0", features = ["bundled", "parquet"] }
gio = "0.20"
glib = "0.20"
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }

[package.metadata.deb]
maintainer = "Parquetta Maintainers <noreply@example.com>"
copyright = "2026 Parquetta Maintainers"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/parquetta", "usr/bin/", "755"],
    ["packaging/dev.parquetta.Parquetta.desktop", "usr/share/applications/dev.parquetta.Parquetta.desktop", "644"],
    ["packaging/dev.parquetta.Parquetta.metainfo.xml", "usr/share/metainfo/dev.parquetta.Parquetta.metainfo.xml", "644"],
    ["packaging/dev.parquetta.Parquetta.mime.xml", "usr/share/mime/packages/dev.parquetta.Parquetta.xml", "644"],
    ["Parquetta.svg", "usr/share/icons/hicolor/scalable/apps/dev.parquetta.Parquetta.svg", "644"],
    ["LICENSE", "usr/share/doc/parquetta/copyright", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/parquetta", dest = "/usr/bin/parquetta", mode = "755" },
    { source = "packaging/dev.parquetta.Parquetta.desktop", dest = "/usr/share/applications/dev.parquetta.Parquetta.desktop", mode = "644" },
    { source = "packaging/dev.parquetta.Parquetta.metainfo.xml", dest = "/usr/share/metainfo/dev.parquetta.Parquetta.metainfo.xml", mode = "644" },
    { source = "packaging/dev.parquetta.Parquetta.mime.xml", dest = "/usr/share/mime/packages/dev.parquetta.Parquetta.xml", mode = "644" },
    { source = "Parquetta.svg", dest = "/usr/share/icons/hicolor/scalable/apps/dev.parquetta.Parquetta.svg", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/parquetta/LICENSE", mode = "644" },
]
